[tool.poetry]
name = "pic-scanner"
version = "1.0.0-dev1"
description = "Pic Scanner"
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inspyre-toolbox = ">=1.5.1"
pillow = "^10.3.0"
python-box = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
