[tool.poetry]
name = "pic-scanner"
version = "1.0.0-dev1"
description = "Pic Scanner"
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inspyre-toolbox = ">=1.5.2"
pillow = "^10.3.0"
python-box = "^7.1.1"
pysimplegui = "^5.0.4"
requests = "^2.32.2"
rich = "^13.7.1"
packaging = "^24.0"
importlib = "^1.0.4"


[tool.poetry.group.dev.dependencies]
ptipython = "^1.0.1"
ipython = "^8.24.0"
prompt-toolkit = "^3.0.43"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-autoapi = "^3.1.1"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.scripts]
pic-scanner = "pic_scanner.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
